src/test/ui/const-generics/issues/issue-68615-adt.min.stderr
error: `[usize; 0]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-68615-adt.rs:6:23
   |
LL | struct Const<const V: [usize; 0]> {}
   |                       ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: aborting due to previous error

